[package]
name = "burst"
version = "0.0.2"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"
description = "A disassembler, currently supporting x86."
keywords = ["disassemble", "assembly", "x86", "x86_64"]
homepage = "https://github.com/endoli/burst.rs"
repository = "https://github.com/endoli/burst.rs"
documentation = "https://docs.rs/burst/"

[dependencies]
